[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/ImportAssets.gd" type="Script" id=1]

[node name="ImportAssets" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "This scene imports all of the assets that are in the user's directory, and displays the file paths of the assets as they are being imported.

Once it is done importing, the scene goes to the main menu."
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 451.0
margin_top = 278.0
margin_right = 573.0
margin_bottom = 322.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 122.0
margin_bottom = 20.0
text = "Importing assets..."
align = 1

[node name="ImportingLabel" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 122.0
margin_bottom = 44.0
align = 1

[node name="MissingAssetsPopup" type="AcceptDialog" parent="."]
margin_right = 500.0
margin_bottom = 200.0
popup_exclusive = true
window_title = "Missing Asset Folder"
dialog_autowrap = true

[connection signal="popup_hide" from="MissingAssetsPopup" to="." method="_on_MissingAssetsPopup_popup_hide"]
